[gd_scene load_steps=6 format=2]

[ext_resource path="res://Global.gd" type="Script" id=1]
[ext_resource path="res://Scn/Menu/Blur.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shader/BlurShader.shader" type="Shader" id=3]
[ext_resource path="res://Scn/Menu/CenteredPanel.tscn" type="PackedScene" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/blur_amount = 2.5

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
margin_right = 1286.0
margin_bottom = 716.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Blur" parent="Menu" instance=ExtResource( 2 )]
material = SubResource( 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 1286.0
margin_bottom = 716.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" parent="Menu" instance=ExtResource( 5 )]

[node name="Sensitivity" type="HBoxContainer" parent="Menu/Menu/Buttons" index="0"]
margin_right = 600.0
margin_bottom = 86.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/Menu/Buttons/Sensitivity"]
margin_right = 198.0
margin_bottom = 86.0
hint_tooltip = "Haha mouse make player aim go skrrt"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Sensitivity"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensSlider" type="HSlider" parent="Menu/Menu/Buttons/Sensitivity"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 86.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 2.0

[node name="Flip" type="CheckButton" parent="Menu/Menu/Buttons" index="1"]
modulate = Color( 0.705882, 0.823529, 1, 1 )
margin_top = 90.0
margin_right = 600.0
margin_bottom = 177.0
hint_tooltip = "Whether surfaces are magnets ;P"
mouse_default_cursor_shape = 2
size_flags_vertical = 3
pressed = true
text = "FlipDeeDoo Activator"
align = 1

[node name="Sound" type="HBoxContainer" parent="Menu/Menu/Buttons" index="2"]
margin_top = 181.0
margin_right = 600.0
margin_bottom = 268.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/Menu/Buttons/Sound"]
margin_right = 198.0
margin_bottom = 87.0
hint_tooltip = "How loud sounds are (don't break yur ears plz)"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Sound"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSlider" type="HSlider" parent="Menu/Menu/Buttons/Sound"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 87.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Music" type="HBoxContainer" parent="Menu/Menu/Buttons" index="3"]
margin_top = 272.0
margin_right = 600.0
margin_bottom = 359.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/Menu/Buttons/Music"]
margin_right = 198.0
margin_bottom = 87.0
hint_tooltip = "Lets you disable my tunes to listen to your own, you spoons"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Music"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSlider" type="HSlider" parent="Menu/Menu/Buttons/Music"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 87.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Quit" type="Button" parent="Menu/Menu/Buttons" index="4"]
modulate = Color( 0.698039, 0.815686, 1, 1 )
margin_top = 363.0
margin_right = 600.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 64 )
hint_tooltip = "Ditch your friends"
mouse_default_cursor_shape = 2
size_flags_vertical = 3
text = "Quit to Main Menu"
[connection signal="mouse_exited" from="Menu/Menu/Buttons/Sensitivity/SensSlider" to="." method="_on_SensSlider_mouse_exited"]
[connection signal="value_changed" from="Menu/Menu/Buttons/Sensitivity/SensSlider" to="." method="_on_SensSlider_value_changed"]
[connection signal="toggled" from="Menu/Menu/Buttons/Flip" to="." method="_on_CheckBox_toggled"]
[connection signal="mouse_exited" from="Menu/Menu/Buttons/Sound/SSlider" to="." method="_on_SSlider_mouse_exited"]
[connection signal="value_changed" from="Menu/Menu/Buttons/Sound/SSlider" to="." method="_on_SSlider_value_changed"]
[connection signal="mouse_exited" from="Menu/Menu/Buttons/Music/MSlider" to="." method="_on_MSlider_mouse_exited"]
[connection signal="value_changed" from="Menu/Menu/Buttons/Music/MSlider" to="." method="_on_MSlider_value_changed"]
[connection signal="button_up" from="Menu/Menu/Buttons/Quit" to="." method="_on_Quit_button_up"]

[editable path="Menu/Menu"]
