[gd_scene load_steps=9 format=2]

[ext_resource path="res://Gfx/Shader/BlurShader.shader" type="Shader" id=1]
[ext_resource path="res://Global.gd" type="Script" id=2]
[ext_resource path="res://scn/UI/CenteredPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scn/UI/Blur.tscn" type="PackedScene" id=4]
[ext_resource path="res://scn/UI/Graphics.tscn" type="PackedScene" id=5]
[ext_resource path="res://Theme/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://scn/UI/Controls/Controls.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/blur_amount = 2.5

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )
gravity = NodePath("Menu/GameOptions/Margin/Buttons/Grav")

[node name="Menu" type="MarginContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" parent="Menu" instance=ExtResource( 4 )]
material = SubResource( 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameOptions" type="CenterContainer" parent="Menu"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Margin" parent="Menu/GameOptions" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 340.0
margin_top = 108.0
margin_right = 940.0
margin_bottom = 612.0
rect_min_size = Vector2( 600, 500 )
theme = null

[node name="Buttons" type="VBoxContainer" parent="Menu/GameOptions/Margin"]
margin_right = 600.0
margin_bottom = 504.0
custom_constants/separation = 12

[node name="How2Play" type="Button" parent="Menu/GameOptions/Margin/Buttons"]
margin_right = 600.0
margin_bottom = 47.0
hint_tooltip = "\"Control yourself, you sick potato\" - Sun Tzu, Art of War"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change Controls"

[node name="Gfx" type="Button" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 0.709804, 0.827451, 1, 1 )
margin_top = 59.0
margin_right = 600.0
margin_bottom = 106.0
hint_tooltip = "How 2 set eyeballs on fire 101"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Graphics"

[node name="ViewDist" type="HBoxContainer" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 1, 0.92549, 0.843137, 1 )
margin_top = 118.0
margin_right = 600.0
margin_bottom = 157.0

[node name="Label" type="Label" parent="Menu/GameOptions/Margin/Buttons/ViewDist"]
margin_right = 198.0
margin_bottom = 39.0
hint_tooltip = "Lowering helps y'all potato PCs (but your player gonna need glasses)"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "View Length "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewSlider" type="HSlider" parent="Menu/GameOptions/Margin/Buttons/ViewDist"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 64.0
max_value = 8192.0
step = 0.1
value = 1536.0

[node name="Sensitivity" type="HBoxContainer" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 0.835294, 0.984314, 1, 1 )
margin_top = 169.0
margin_right = 600.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="Menu/GameOptions/Margin/Buttons/Sensitivity"]
margin_right = 198.0
margin_bottom = 39.0
hint_tooltip = "Haha high sensitivity make player aim go skrrt"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Sensitivity"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensSlider" type="HSlider" parent="Menu/GameOptions/Margin/Buttons/Sensitivity"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 2.0

[node name="Grav" type="CheckButton" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 0.705882, 0.823529, 1, 1 )
margin_top = 220.0
margin_right = 600.0
margin_bottom = 267.0
hint_tooltip = "O_O wot"
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "Gravity???"
align = 1

[node name="Flip" type="CheckButton" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 0.705882, 0.823529, 1, 1 )
margin_top = 279.0
margin_right = 600.0
margin_bottom = 326.0
hint_tooltip = "Whether surfaces are magnets ;P"
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "FlipDeeDoo Activator"
align = 1

[node name="Sound" type="HBoxContainer" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 0.886275, 0.847059, 1, 1 )
margin_top = 338.0
margin_right = 600.0
margin_bottom = 377.0

[node name="Label" type="Label" parent="Menu/GameOptions/Margin/Buttons/Sound"]
margin_right = 198.0
margin_bottom = 39.0
hint_tooltip = "How loud sounds are (don't break yur ears plz)"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Sound"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSlider" type="HSlider" parent="Menu/GameOptions/Margin/Buttons/Sound"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Music" type="HBoxContainer" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 0.835294, 1, 0.87451, 1 )
margin_top = 389.0
margin_right = 600.0
margin_bottom = 428.0

[node name="Label" type="Label" parent="Menu/GameOptions/Margin/Buttons/Music"]
margin_right = 198.0
margin_bottom = 39.0
hint_tooltip = "Disable my tunes, you spoons (and put on your own ig)"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Music"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSlider" type="HSlider" parent="Menu/GameOptions/Margin/Buttons/Music"]
modulate = Color( 0.694118, 0.815686, 1, 1 )
margin_left = 202.0
margin_right = 600.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Quit" type="Button" parent="Menu/GameOptions/Margin/Buttons"]
modulate = Color( 1, 0.764706, 0.764706, 1 )
margin_top = 440.0
margin_right = 600.0
margin_bottom = 504.0
rect_min_size = Vector2( 0, 64 )
hint_tooltip = "Ditch your friends >:)"
mouse_default_cursor_shape = 2
size_flags_vertical = 3
text = "Quit to Main Menu"

[node name="GfxCenter" type="CenterContainer" parent="Menu"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 1

[node name="Graphics" parent="Menu/GfxCenter" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 340.0
margin_top = 60.0
margin_right = 940.0
margin_bottom = 660.0
rect_min_size = Vector2( 600, 600 )
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Instructions" parent="Menu" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
original = NodePath("../GameOptions")

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Music"

[connection signal="pressed" from="Menu/GameOptions/Margin/Buttons/How2Play" to="." method="_on_How2Play_pressed"]
[connection signal="pressed" from="Menu/GameOptions/Margin/Buttons/Gfx" to="." method="_on_Gfx_pressed"]
[connection signal="value_changed" from="Menu/GameOptions/Margin/Buttons/ViewDist/ViewSlider" to="." method="_on_ViewSlider_value_changed"]
[connection signal="value_changed" from="Menu/GameOptions/Margin/Buttons/Sensitivity/SensSlider" to="." method="_on_SensSlider_value_changed"]
[connection signal="toggled" from="Menu/GameOptions/Margin/Buttons/Grav" to="." method="_on_Grav_toggled"]
[connection signal="toggled" from="Menu/GameOptions/Margin/Buttons/Flip" to="." method="_on_Flip_toggled"]
[connection signal="value_changed" from="Menu/GameOptions/Margin/Buttons/Sound/SSlider" to="." method="_on_SSlider_value_changed"]
[connection signal="value_changed" from="Menu/GameOptions/Margin/Buttons/Music/MSlider" to="." method="_on_MSlider_value_changed"]
[connection signal="pressed" from="Menu/GameOptions/Margin/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
